Continue AddTravelActivity.kt
Add Listeners for

etAddress
Destinations
etTravelDate
etReturnDate

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="numberOfTravelers">מספר נוסעים :</string>
     <string name="travelDate">תאריך יציאה</string>
     <string name="returnDate">תאריך חזרה</string>
+    <string name="send">שלח</string>
 </resources>
