--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="enterTravelDetails">הכנס את פרטי הנסיעה</string>
     <string name="mailAddress">כתובת מייל</string>
     <string name="address">כתובת איסוף וחזרה</string>
-    <string name="destinationAddresses">כתובת/ות יעד/ים</string>
+    <string name="destinationAddresses">כתובת יעד</string>
     <string name="numberOfTravelers">מספר נוסעים :</string>
     <string name="travelDate">תאריך יציאה</string>
     <string name="returnDate">תאריך חזרה</string>
@@ -21,4 +21,5 @@
     <string name="invalid_email">אנא הכנס כתובת מייל חוקית</string>
     <string name="invalid_address">אנא בחר כתובת יציאה וחזרה</string>
     <string name="invalid_destination">אנא בחר כתובת יעד</string>
+    <string name="orderComplete">הזמנתך נקלטה במערכת</string>
 </resources>
